--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "chrome-extension-boilerplate-react",
-  "version": "5.0.4",
-  "description": "A chrome extension boilerplate built with React 18, Webpack 5, and Webpack Dev Server 4",
+  "name": "coursera-playback-hotkeys-chrome-extension",
+  "version": "1.0.0",
+  "description": "Add keyboard hotkeys for video playback",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/lxieyang/chrome-extension-boilerplate-react.git"
+    "url": "https://github.com/chauchakching/coursera-playback-hotkeys-chrome-extension.git"
   },
   "scripts": {
     "build": "node utils/build.js",
@@ -13,6 +13,7 @@
     "prettier": "prettier --write '**/*.{js,jsx,ts,tsx,json,css,scss,md}'"
   },
   "dependencies": {
+    "hotkeys-js": "^3.13.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
